force-app/main/default/objects/Log_Statistics__c/Log_Statistics__c.object-meta.xml
<CustomObject>
    <label>Log Statistics</label>
    <nameField>
        <label>Log Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Statistics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>