force-app/main/default/objects/Log_Statistics__c/fields/Archive_Count__c.field-meta.xml
<CustomField>
    <fullName>Archive_Count__c</fullName>
    <description>Number of archived logs</description>
    <label>Archive Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>