force-app/main/default/objects/Log_Statistics__c/fields/Avg_Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Avg_Processing_Time_Ms__c</fullName>
    <description>Average processing time</description>
    <label>Average Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>