force-app/main/default/objects/Log_Statistics__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <description>Number of error-level logs</description>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>