force-app/main/default/objects/Log_Statistics__c/fields/Max_Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Max_Processing_Time_Ms__c</fullName>
    <description>Maximum processing time</description>
    <label>Max Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>