force-app/main/default/objects/Log_Statistics__c/fields/Purge_Count__c.field-meta.xml
<CustomField>
    <fullName>Purge_Count__c</fullName>
    <description>Number of purged logs</description>
    <label>Purge Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>