force-app/main/default/objects/Log_Statistics__c/fields/Total_Memory_Usage_KB__c.field-meta.xml
<CustomField>
    <fullName>Total_Memory_Usage_KB__c</fullName>
    <description>Total memory consumed</description>
    <label>Total Memory Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>