force-app/main/default/objects/Log_Statistics__c/fields/Warning_Count__c.field-meta.xml
<CustomField>
    <fullName>Warning_Count__c</fullName>
    <description>Number of warning-level logs</description>
    <label>Warning Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>